--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head></head>
 <body height=95%>
 <article height=90% width=90% >
-	<iframe  id="video" height=100% width=100% src="//www.youtube.com/embed/NpdU6UqWHHM" frameborder="0" allowfullscreen></iframe>
+	<embed
+width="100%" id="video" 
+src="http://www.youtube.com/v/XGSy3_Czz8k"
+</embed>
 </article>
 <script type="text/javascript" src='size.js'>
 </script>
