--- a/index.html
+++ b/index.html
@@ -2,13 +2,67 @@
 <html height="100%">
 <head></head>
 <body height=95%>
-<article height=90% width=90% >
-	<embed
-width="100%" id="video" 
-src="http://www.youtube.com/v/XGSy3_Czz8k"
-</embed>
-</article>
-<script type="text/javascript" src='size.js'>
-</script>
+<body>
+
+      <div class="tf_content" id="page4">
+        <div class="container">
+            <div class="vendor" id="video">
+     <div id="player"></div>
+
+
+           </div>
+       </div>
+       </div>  
+
+
+
+
+        <!-- The JavaScript -->
+
+      <script>
+
+      var tag = document.createElement('script');
+ tag.src = "https://www.youtube.com/iframe_api";
+      var firstScriptTag = document.getElementsByTagName('script')[0];
+      firstScriptTag.parentNode.insertBefore(tag, firstScriptTag)
+
+      var player;
+      function onYouTubeIframeAPIReady() {
+        player = new YT.Player('player', {
+          height: '420',
+          width: '640',
+          videoId: 'lVQzIwpClXA?theme=light&color=white&autohide=0&autoplay=0&showinfo=0&rel=1&controls=1;',
+          events: {
+            'onReady': onPlayerReady,
+            'onStateChange': onPlayerStateChange
+          }
+        });
+      }
+      function onPlayerReady(event) {
+
+      } 
+        var done = false;
+      function onPlayerStateChange(event) {
+        if (event.data == YT.PlayerState.PLAYING ) {
+    audioElement.volume=0;
+          done = true;
+        }
+      }
+
+
+     video = document.getElementById("video");
+
+
+
+
+            $(video).mouseleave(function(){
+                   player.stopVideo()
+                up();   
+                });
+
+
+
+ $(".container").fitVids();
+ </script>
 </body>
-</html>
+</html> 
