--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html height="100%">
 <head>
-  <script type="text/javascript" src='vplayer.js'></script>
+  <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
+<script type="text/javascript" charset="utf-8" src="video.js"></script>
 </head>
 <body height=95%>
 <script type="text/javascript">
-  window.plugins.vplayer.show({ videopath: "http://www.youtube.com/watch?v=AEubhc8RjTk" },{},{});
+window.plugins.videoPlayer.play("https://www.youtube.com/watch?v=en_sVVjWFKk");
 </script>
 </body>
 </html> 
