--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
 </head>
 <body height=95%>
 <script type="text/javascript">
-window.plugins.videoPlayer.play("https://www.youtube.com/watch?v=en_sVVjWFKk");
+window.plugins.videoPlayer.play("http://www.youtube.com/watch?v=TG3Y-eCste4");
 </script>
 </body>
 </html> 
